fix: search bar display on mobile

--- a/src/app/pages/noticias/noticias-list/noticias-list.css
+++ b/src/app/pages/noticias/noticias-list/noticias-list.css
@@ -94,4 +94,8 @@
     left: 140px;
     top: 24px;
   }
+
+  .search-dropdown {
+    left: -100px;
+  }
 }
